      removals for the troves those included troves replace
    * Chroot handling was broken in 0.71.2 and prevented the user name
      lookup code for the chroot from exiting back out of the chroot
    * showchangeset on relative changesets now displays them as jobs.
    * query and queryrep now exclude components if they match their 
      package name
  o Code structure:
    * queryrep, query, showchangeset, and update --info all use the same 
      code to determine how to display their data.  Display.py was changed
      to perform general display operations.
    * query.py added
    * added JobSource concept for searching and manipulating lists of jobs.

Changes in 0.71.2
  o Client Changes:
    * The update-conary option has been renamed updateconary per
      bugzilla #428
    * buildPath can be set in contexts
    * cvc co <foo> will work even if there are two foos on the same label with
      different branches.  In that case, it will warn about the older foo 
      which it doesn't check out
    * Test mode didn't work for updates and erases which were split into
      multiple jobs
  o Build Changes:
    * Combined the EtcConfig and Config policies, and deprecated
      the EtcConfig policy.
    * All config files default to being put into a :config component.
      This is overridden by any ComponentSpec specifications in the recipe.
    * A use flag has been added for xen defaulting to 'sense prefernot'.  This
      flag should be used to specify flavors for xen domU builds where special
      provisions are made for paravirtualized domU.
    * Added new CheckDesktopFiles policy to catch some more common errors
      in .desktop files.  (For now, it looks for common cases of missing
      icons; more may be added over time.)
    * The Requires policy now interprets synthetic RPATH elements (passed in
      with the rpath= keyword argument) as shell-style globs that are
      interpreted relative first to the destdir and then to the system.
